--- a/package.json
+++ b/package.json
@@ -7,8 +7,13 @@
     "serve": "vite preview"
   },
   "dependencies": {
+    "ag-grid-community": "^25.1.0",
+    "ag-grid-react": "^25.1.0",
+    "axios": "^0.21.1",
     "react": "^17.0.0",
-    "react-dom": "^17.0.0"
+    "react-dom": "^17.0.0",
+    "semantic-ui-css": "^2.4.1",
+    "semantic-ui-react": "^2.0.3"
   },
   "devDependencies": {
     "@vitejs/plugin-react-refresh": "^1.1.0",
